--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.21.1/axios.min.js" integrity="sha512-bZS47S7sPOxkjU/4Bt0zrhEtWx0y0CRkhEp8IckzK+ltifIIE9EMIMTuT/mEzoIMewUINruDBIR/jJnbguonqQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 </head>
 <body> 
-    <div id="app"></div>
+    <div id="app">
+        <div v-if="arrayEmail.length == 10" v-for ="element in arrayEmail">{{element}}</div>
+    </div>
     <script src="js/script.js"></script>
 </body>
 </html>
